theme/static/css/hydroshare_core.css
/* ... */
.carousel-inner .caption-wrapper {
    width: 100%;
    height: 100%;
    display: table;
}

#table-features td {
    padding: 8px 0;
}

.home-panel-info {
	min-height: 300px;
	margin: 15px 0;
}

.checkmark {
	color: #81D685;
	font-size: 18px;
	margin-left: 5px;
	margin-right: 20px;
}

.img-devices {
	max-height: 100px;
	margin: auto;
}

.screen-sizes {
    background: url(../img/graypattern.jpg);
	background-color: #BBB;
	padding: 15px 0;
	text-align: center;
    margin-bottom: -20px;
}

.screen-sizes h2 {
    font-family: 'webfont_light', Helvetica, Arial, sans-serif;
    color: #777;
    text-shadow: 0 1px rgba(255, 255, 255, 0.6);
}

.btn-signup {
    margin: 20px;
}

.profile-pic-thumbnail-small {
    width: 40px;
    height: 40px;
}

.profile-pic-thumbnail-small::before {
	content: "\e008";
	font-family: "Glyphicons Halflings";
	float: left;
	font-size: 30px;
	color: #2D9EB3;
	border: 1px solid #9C9C9C;
	height: 30px;
	width: 30px;
	border-radius: 50%;
	line-height: 22px;
	text-align: center;
	margin-top: 10px;
	margin-left: 6px;
}

.users-joined .profile-pic-thumbnail-small::before {
    font-size: 37px;
    border: 2px solid #9C9C9C;
    height: 39px;
    width: 39px;
    line-height: 29px;
    margin-top: 1px;
    margin-left: 0;
}

.users-joined .profile-pic-thumbnail-small {
    display: inline-block;
    float: initial;
    margin: 0 3px;
}

.users-joined .profile-pic-thumbnail {
    float: initial;
    display: inline-block;
    margin: 0 3px;
}

/*  CSS ARROW BEGINS */

.arrow_box:after, .arrow_box:before {
    bottom: 100%;
    left: 90%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none
}

.profile-card.arrow_box:after, .profile-card.arrow_box:before {
    left: 50%;
}

.arrow_box_top_center:before, .arrow_box_top_center:after {
    bottom: 100%;
    left: 50%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
}

.arrow_box_top_right:after, .arrow_box_top_right:before {
    bottom: 100%;
    left: 90%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
}

.arrow_box:after {
    border-color: rgba(136, 183, 213, 0);
    border-bottom-color: #FFF;
    border-width: 10px;
    margin-left: -10px;
}

.arrow_box:before {
    border-color: rgba(194, 225, 245, 0);
    border-bottom-color: #DDD;
    border-width: 11px;
    margin-left: -11px;
}

/*  CSS ARROW ENDS */

#signout-menu {
    float: right;
}

#profile-menu .profile-pic-thumbnail {
    margin: 5px 0 0 0;
    cursor: pointer;
}

.come-in {
  transform: translateY(150px);
  animation: come-in 0.8s ease forwards;
}

.come-in:nth-child(odd) {
  animation-duration: 0.6s; /* So they look staggered */
}

@keyframes come-in {
  to { transform: translateY(0); }
}

.steps-container {
    text-align: center;
    margin-top: -40px;
}

.step-wrapper {
    padding: 20px;
    margin-top: 40px;
}

.step-item {
	border-top: 1px solid #D6D6D6;
    padding: 10px;
	color: #4BB5C1;
}

.step-item:hover {
	background: #FFF;
}

.step-item h4 {
	color: #555 !important;
}

.step-number {
    border: 1px solid #A9A9A9;
    width: 30px;
    height: 30px;
    background: #FFF;
    border-radius: 50%;
    padding-top: 4px;
    color: #000;
    margin: auto;
    margin-top: -25px;
}

.home-page-block {
    margin-bottom: 30px;
}

div.description.active {
    display: block;
}

.step-description {
    text-align: center;
    color: #666;
    line-height:20px;
}

.description-container {
    height: 150px;
}

.table-display {
    display: table;
    width: 100%
}

.table-cell-display {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
}

.home-page-block-title {
    color: #4BB5C1;
}

.img-step {
    margin: auto
}

.availability-description {
    height:100px;
}

/* Profile edit page */
.profile-picture-controls {
    margin-top: 30px;
}

.profile-picture-controls a {
    cursor: pointer;
}

.profile-picture-controls .btn {
    margin-bottom: 20px;
    width: 100%;
}

#icon-warning {
    font-size: 40px;
    color: #D9534F;
}

#group-cv .btn:first-child{
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}

.btn-save-profile {
    margin-left: 10px;
}

#user-type-other {
    display: none;
}

div.btn-update-picture {
    background: rgba(0, 0, 0, 0.7);
    text-align: center;
    color: #FFF;
    border-radius: 50%;
    height: 150px;
    width: 150px;
    margin: auto;
    top: -150px;
    margin-bottom: -150px;
    opacity: 0;
    padding-top: 60px;
    cursor: pointer;
}

div.btn-update-picture:hover {
    opacity: 1;
    transition: opacity 0.3s;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
}

#btn-delete-profile-pic {
    margin-top: -150px;
    float: right;
}

#profile-description {
    font-style: italic;
}

#user-profile-tabs {
	margin-top: 20px;
	margin-bottom: 60px;
}

.form-invalid {
    border-color: #E96666;
    outline: 0;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(233, 102, 102, 0.6);
	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(233, 102, 102, 0.6);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(233, 102, 102, 0.6);
}

button.no-style {
    background: none;
    border: none;
}

button.no-style:focus {
    border: none;
    outline: none;
}

.blured-out {
    pointer-events: none;
}

/* -------------- Collaborate and Groups page styling --------------- */

.collaborate-header {
    background: #093E54;
    padding: 20px 0;
    margin-bottom: 20px;
	margin-top: 20px;
}

.collaborate-header a {
    color: #CCC;
}

.collaborate-nav-item {
    font-size: 18px;
    margin-right: 10px;
    padding: 10px 0;
}

.collaborate-nav-item:hover {
    text-decoration: none;
    color: #FFF;
    cursor: pointer;
}

.collaborate-nav-item.active {
	color: #FFF;
	font-weight: bold;
}
/* ... */

